@@ -1,4 +1,4 @@
-#	$NetBSD: CHANGES-1.4.2,v 1.1.2.23 1999/09/13 23:08:44 he Exp $
+#	$NetBSD: CHANGES-1.4.2,v 1.1.2.24 1999/09/16 03:36:58 itojun Exp $
 
 A complete list of changes from NetBSD 1.4.1 to NetBSD 1.4.2:
 
@@ -353,3 +353,8 @@ distrib/utils/sysinst/arch/mac68k/md.c		1.12
 sys/arch/arm32/podulebus/if_ie.c		(patch)
 
   Fix Berkeley Packet Filter support, fixing PR#8343.  (tron)
+
+sys/dev/ic/smc91cxx.c				1.18-1.19
+
+  Avoid multicast packet loopback from itself during promiscuous mode.
+  This makes the driver behave as IFF_SIMPLEX interface in all cases.
